# want_to_buy

./: .gitignore  docker-compose.yaml  postgres_db_init.sql
server/: Cargo.toml  Dockerfile  config.toml
server/migrations/: 20230525100530_initial.sql  20230606140420_session_id.sql  20230609212417_lists_constraint.sql
server/src/: config.rs  context.rs  main.rs
server/src/controllers/: contacts.rs  lists.rs  mod.rs  purchases.rs  users.rs
server/src/models/: contacts.rs  lists.rs  mod.rs  purchases.rs  users.rs
web-client/: .env  .eslintcache  package.json
web-client/src/: App.vue  main.ts
web-client/src/common/: AppNavbar.vue  CreateFolderModal.vue  CreatePurchaseModal.vue  Loader.vue  index.ts
web-client/src/enums/: icon-names.enum.ts  index.ts  request.enum.ts  route-names.enum.ts
web-client/src/fields/: InputField.vue
web-client/src/forms/: LoginForm.vue
web-client/src/helpers/: auth.helpers.ts
web-client/src/pages/: FolderPage.vue  HomePage.vue  LoginPage.vue  UiKitPage.vue
web-client/src/pages/folder-page/: FolderItem.vue  index.ts
web-client/src/pages/home-page/: HomeFolder.vue  index.ts
web-client/src/router/: index.ts
web-client/src/store/modules/: auth.module.ts
web-client/src/styles/: global.scss  variables.scss
web-client/src/types/: index.ts
web-client/src/utils/: date.util.ts
web-client/static/branding/: _app-colors.scss
