[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
tokio = { version = "1.25", features = ["full"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "offline", "chrono", "uuid", "json"] }
chrono = "0.4.24"
config = "0.13.3"
serde = "1.0.163"
confy = "0.5.1"
