[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
eyre = "0.6"
tokio = { version = "1.25", features = ["full"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "offline", "chrono", "uuid", "json"] }
chrono = { version = "0.4.0", features = ["serde"] }
config = "0.13.3"
serde = "1.0.163"
confy = "0.5.1"
futures-util = "0.3.28"
pwhash = "1.0.0"
actix-session = "0.7.2"
uuid = { version = "1.3.3", features = ["v4", "fast-rng","macro-diagnostics",]}
